--- a/PennState/Content/Site.css
+++ b/PennState/Content/Site.css
@@ -25,15 +25,6 @@
         display: inline-block;
     }
 
-.overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5); /*dim the background*/
-}
 
 .labelClass {
     font-weight:100;
@@ -42,11 +33,22 @@
     color: dodgerblue;
 }
 
-    .labelClass:hover {
-        opacity: 0.5;
-        cursor: pointer;
-        text-decoration: underline;
-    }
+.linkAnchor{
+    font-weight:100;
+    color: black;
+}
+
+.linkAnchor:hover{
+    opacity: 0.5;
+    cursor: pointer;
+    color: dodgerblue;
+}
+
+.labelClass:hover {
+    opacity: 0.5;
+    cursor: pointer;
+    text-decoration: underline;
+}
         .inputfile:focus + label,
         .inputfile + label:hover {
             color: dodgerblue;
@@ -230,7 +232,6 @@ label {
 .edit {
     display: inline-block;
     position: relative;
-    /*float: left;*/
 }
 
 p.thick {
@@ -253,27 +254,25 @@ p.thick {
     background: #FFFFFF;
 }
 
-.sideModal {
-    position: fixed;
-    right: -600px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-    top: 62px;
-    width: 600px;
-    height: 93.6vh;
-    background: #FFFFFF;
-    transition: .5s;
-    text-align: left;
-    overflow: auto;
-}
+
+
+
 
 .modal-content {
     height: 50%;
     width: 40%;
     margin: 15% auto;
-}
 
+}
+.modal-content2 {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 99.9%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
 .ui-dialog {
     overflow: visible;
 }
@@ -321,7 +320,6 @@ p.thick {
 .createModal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
     border-style: solid;
     border-width: 1px;
     border-color: black;
@@ -332,7 +330,44 @@ p.thick {
     overflow: auto; /* Enable scroll if needed */
     background-color: white; /* Fallback color */
     box-sizing: border-box;
+    animation-name: animatecenter;
+    animation-duration: 0.4s;
+    z-index: 1; /* keep on top of other elements on the page */
+    box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
 }
+
+@keyframes animateright {
+    from {
+        right: -600px;
+        opacity: 0;
+    }
+
+    to {
+        right: 0;
+        opacity: 1;
+    }
+}
+
+.sideModal {
+    display: none;
+    position: fixed;
+    right: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    top: 62px;
+    width: 600px;
+    height: 93.6vh;
+    background: #FFFFFF;
+    transition: .5s;
+    text-align: left;
+    overflow: auto;
+    background-color: dodgerblue; /* Black w/ opacity */
+    animation-name: animateright;
+    animation-duration: 0.4s;
+    z-index: 1; /* keep on top of other elements on the page */
+}
+
 
 
 
