--- a/PennState/Views/Item/Edit.cshtml
+++ b/PennState/Views/Item/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PennState.ViewModels.EditItemViewModel
 <link href="~/Content/chosen.css" rel="stylesheet" />
 <div id="divEdit">
-    @using (Ajax.BeginForm("Edit", "Item", FormMethod.Post, new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divEdit", OnSuccess = "closeEdit()" }, new { @onsubmit = "return validateEditForm()", @id = "editForm", enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Edit", "Item", FormMethod.Post, new { @onsubmit = "return validateEditForm()", @id = "editForm", enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -219,7 +219,6 @@
 </div>
 <script src="~/Scripts/jquery.validate.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 <script>
 
     function stopRKey(evt) {
