--- a/PennState/Views/Item/ItemDetails.cshtml
+++ b/PennState/Views/Item/ItemDetails.cshtml
@@ -17,45 +17,36 @@
         <dd>
             @Html.DisplayFor(model => model.Item.AmountInStock)
         </dd>
-        @if (Model.Item.LocationComments != null)
-        {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.LocationComments)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.LocationComments)
-        </dd>
+        @if (Model.Item.Manufacturer != null && Model.Item.Manufacturer != "")
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.Manufacturer)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Item.Manufacturer)
+            </dd>
         }
-        @if (Model.Item.Manufacturer != null)
+        @if (Model.Item.CatalogNumber != null && Model.Item.CatalogNumber != "")
         {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.Manufacturer)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.CatalogNumber)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.Manufacturer)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.CatalogNumber)
+            </dd>
         }
-        @if (Model.Item.CatalogNumber != null)
+        @if (Model.Item.WebAddress != null && Model.Item.WebAddress != "")
         {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.CatalogNumber)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.WebAddress)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.CatalogNumber)
-        </dd>
-        }
-        @if (Model.Item.WebAddress != null)
-        {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.WebAddress)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Item.WebAddress)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.WebAddress)
+            </dd>
         }
         <dt>
             @Html.DisplayNameFor(model => model.Item.Vendor)
@@ -64,49 +55,78 @@
         <dd>
             @Html.DisplayFor(model => model.Item.Vendor)
         </dd>
-        @if (Model.Item.ContactInfo != null)
+        <dt>
+            @Html.DisplayNameFor(model => model.Item.Location.LocationName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Item.Location.LocationName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Item.SubLocation.SubLocationName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Item.SubLocation.SubLocationName)
+        </dd>
+        @if (Model.Item.LocationComments != null && Model.Item.LocationComments != "")
         {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.ContactInfo)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.LocationComments)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.ContactInfo)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.LocationComments)
+            </dd>
         }
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.PurchaseDate)
-        </dt>
+        @if (Model.Item.ContactInfo != null && Model.Item.ContactInfo != "")
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.ContactInfo)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.PurchaseDate)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.ContactInfo)
+            </dd>
+        }
+        @if (Model.Item.PurchaseDate != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.PurchaseDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.Added)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Item.PurchaseDate)
+            </dd>
+        }
+        @if (Model.Item.PurchasePrice > 0)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.PurchasePrice)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.Added)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.PurchasePrice)
+            </dd>
+        }
+        @if (Model.Item.Added != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.Added)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Item.Added)
+            </dd>
+        }
         @if (Model.Item.Updated != null)
         {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.Updated)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.Updated)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.Updated)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.Updated)
+            </dd>
         }
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.PurchasePrice)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Item.PurchasePrice)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Item.ItemType)
         </dt>
@@ -114,17 +134,17 @@
         <dd>
             @Html.DisplayFor(model => model.Item.ItemType)
         </dd>
-        @if (Model.Item.ItemNotes != null)
+        @if (Model.Item.ItemNotes != null && Model.Item.ItemNotes != "")
         {
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.ItemNotes)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Item.ItemNotes)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Item.ItemNotes)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Item.ItemNotes)
+            </dd>
         }
-        @{ if (Model.Item.UpdatedBy != null)
+        @{ if (Model.Item.UpdatedBy != null && Model.Item.UpdatedBy != "")
             {
                 <dt>
                     @Html.DisplayNameFor(model => model.Item.UpdatedBy)
@@ -139,7 +159,7 @@
     @{
         if (Model.Item.Photos.Count > 0)
         {
-            <div style="position:absolute;left:450px;bottom:-120px">
+            <div style="position:absolute;left:450px;top:0px">
                 <ul id="slider">
 
                     @foreach(var image in Model.Item.Photos)
