Changes to Requests Action

--- a/PennState/Views/Item/GetItemList.cshtml
+++ b/PennState/Views/Item/GetItemList.cshtml
@@ -21,7 +21,7 @@
     <div class="page-init">
         <div id="listBoxId" class="listBox">
             <div id="theTable" style="height:100%">
-                <table id="myTable" class="table table-hover table-striped header-fixed tablesorter">
+                <table id="myTable" class="table tablesorter table-hover table-striped header-fixed ">
                     <thead>
                         <tr>
                             <th scope="col">
